tegra: add support for NVIDIA Jetson TX1 DevKit
Introduce new tegra subtarget featuring Jetson TX1 Developer Kit.
This Kit consist o two parts, a system on module (P2180) and base board
(P2597). The follownig brief specification will treat both as a single
device and mention mostly OpenWrt relevant features.

CPU: NVIDIA Tegra X1 quad-core @2.2 GHz (Cortex-A57)
RAM: 4 GiB LP-DDR4
Ethernet: 1 Gb RTL8152
Wireless: 2.4/5 GHz 2T2R BCM4354 SDIO
Storage: 16 GiB eMMC
         SD card slot
         SATA port
PCIe: single 4x slot
      M.2 key E slot
USB: 1x 3.0 Type A
     1x 2.0 Micro AB OTG
LEDs: 4x
Buttons: 4x, 3 are GPIO controlled
Expansion headers: 1x 30-pin (J26)
                   1x 40-pin (J21)
UART: on J21 header, sinal voltage is 3.3 V,
      starting count from white triangle
      8. RX, 9. GND, 10. TX
      baud: 115200, parity: none, flow control: none

Prerequisite
To run OpenWrt on the board it is mandatory to have TegraBoot and Cboot
in versions (at least) provided in L4T 28.1 BSP, recomended is using the
latest version from 32.7.5 BSP. Consult L4T documentation[1] on how to
update L4T release on Your Board.

Recomendation
For properly propagating Tegra External Memory Controller tables to the
kernel, U-Boot bootloader needs to be updated with upstream version
(OpenWrt provides slightly extended one). To do that download U-Boot
image from OpenWrt site and replace U-Boot from L4T extracted archive
under 'bootloader/t210ref/p2371-2180' path. To replace U-Boot on the
eMMC use full re-flash or consult documentation[2], explaining how to
update single partition.
After reset device should use updated bootloader.

Installation
Currently booting OpenWrt from SD card is supported. Simply unpack and
write downloaded image with -sdcard.img.gz suffix to an SD card. Place it
in slot, apply power and the board should boot straight to OpenWrt.
Console can be reached through UART pins, micro USB or SSH.

Upgrade
The image with -sdcard.img.gz suffix is also a sysupgrade i

--- a/package/firmware/cypress-firmware/Makefile
+++ b/package/firmware/cypress-firmware/Makefile
@@ -211,6 +211,9 @@ define Package/cypress-firmware-4354-sdio/install
 		../cypress/cyfmac4354-sdio.bin \
 		$(1)/lib/firmware/brcm/brcmfmac4354-sdio.bin
 	$(LN) \
+		../cypress/cyfmac4354-sdio.bin \
+		$(1)/lib/firmware/brcm/brcmfmac4354-sdio.nvidia,p2371-2180.bin
+	$(LN) \
 		../cypress/cyfmac4354-sdio.clm_blob \
 		$(1)/lib/firmware/brcm/brcmfmac4354-sdio.clm_blob
 endef
